--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -16,134 +16,124 @@
                   android:orientation="horizontal"
     >
 
-        <RelativeLayout android:id="@+id/comment_delete"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:background="#c8c7cd"
+        <FrameLayout android:id="@+id/comment_delete"
+                     android:layout_width="60dp"
+                     android:layout_height="match_parent"
+                     android:background="#c8c7cd"
         >
 
             <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
+                       android:layout_gravity="center"
                        android:src="@drawable/ic_action_delete"
             />
 
-        </RelativeLayout>
+        </FrameLayout>
 
-        <RelativeLayout android:id="@+id/comment_reveal"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:background="#5ccdc9">
+        <FrameLayout android:id="@+id/comment_reveal"
+                     android:layout_width="60dp"
+                     android:layout_height="match_parent"
+                     android:background="#5ccdc9">
 
             <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
+                       android:layout_gravity="center"
                        android:src="@drawable/ic_action_reveal"
             />
 
-        </RelativeLayout>
+        </FrameLayout>
 
-        <RelativeLayout android:id="@+id/comment_report"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:background="#ff9000">
+        <FrameLayout android:id="@+id/comment_report"
+                     android:layout_width="60dp"
+                     android:layout_height="match_parent"
+                     android:background="#ff9000">
 
             <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
+                       android:layout_gravity="center"
                        android:src="@drawable/ic_action_whistle14"
             />
 
-        </RelativeLayout>
+        </FrameLayout>
 
-        <RelativeLayout android:id="@+id/comment_reply"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
-                        android:background="#27425a">
+        <FrameLayout android:id="@+id/comment_reply"
+                     android:layout_width="60dp"
+                     android:layout_height="match_parent"
+                     android:background="#27425a">
 
             <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
+                       android:layout_gravity="center"
                        android:src="@drawable/ic_action_reply"
             />
 
-        </RelativeLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/pure_white"
-    >
 
-        <LinearLayout android:id="@+id/feed_detail_main"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="horizontal">
+    <LinearLayout android:id="@+id/feed_detail_main"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="@color/pure_white"
+                  android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/comment_user_image"
-                android:layout_width="@dimen/profile_image_radius"
-                android:layout_height="@dimen/profile_image_radius"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                app:civ_border_color="@color/seperator_color"
-                app:civ_border_width="1dp"
-            />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/comment_user_image"
+            android:layout_width="@dimen/profile_image_radius"
+            android:layout_height="@dimen/profile_image_radius"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            app:civ_border_color="@color/seperator_color"
+            app:civ_border_width="1dp"
+        />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical">
 
-                <RelativeLayout android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/comment_user_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/user_name_blue"
-                        android:textSize="@dimen/body_font_size"
-                        android:textStyle="bold"
-                        tools:text="Name Name"/>
-
-                    <TextView android:id="@+id/comment_time_ago"
-                              android:layout_width="wrap_content"
-                              android:layout_height="wrap_content"
-                              android:layout_alignParentEnd="true"
-                              android:textColor="@color/twentyfive_black"
-                              android:textSize="@dimen/sub_font_size"
-                              tools:text="1h"
-                    />
-
-
-                </RelativeLayout>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/comment"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/comment_user_name"
+                    android:layout_width="0px"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/eighty_black"
-                    android:textSize="@dimen/sub_font_size"
-                    android:autoLink="web|email"
-                    tools:text="test test test testtest test test testtest "/>
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:textColor="@color/user_name_blue"
+                    android:textSize="@dimen/body_font_size"
+                    android:textStyle="bold"
+                    tools:text="Name NameName Name"/>
+
+                <TextView android:id="@+id/comment_time_ago"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="end"
+                          android:textColor="@color/twentyfive_black"
+                          android:textSize="@dimen/sub_font_size"
+                          tools:text="1h"
+                />
+
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web|email"
+                android:textColor="@color/eighty_black"
+                android:textSize="@dimen/sub_font_size"
+                tools:text="test test test testtest test test testtest "/>
+
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/feed_detail_progress_bar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/feed_detail_main"
-            android:indeterminateOnly="true"
-            android:visibility="gone"/>
+    </LinearLayout>
 
-    </RelativeLayout>
 
 </com.daimajia.swipe.SwipeLayout>
