--- a/app/src/main/res/layout/fragment_need_permissions.xml
+++ b/app/src/main/res/layout/fragment_need_permissions.xml
@@ -7,29 +7,31 @@
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
-              android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
+              android:layout_marginStart="32dp"
               android:gravity="center"
               android:text="Take photos and record videos with Tapt's camera"
               android:textColor="@android:color/white"
-              android:textSize="18dp"
+              android:textSize="18sp"
               android:textStyle="bold"/>
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
-              android:gravity="center"
-              android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
+              android:layout_marginStart="32dp"
+              android:gravity="center"
               android:text="Tapt needs permission to use your phone's camera, storage, and audio to take pictures and record video."
               android:textColor="@android:color/darker_gray"
-              android:textSize="16dp"
+              android:textSize="16sp"
     />
-    <TextView android:id="@+id/needPermission_text_button"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center"
-              android:text="Turn On"
-              android:textColor="@android:color/holo_blue_dark"
-              android:textSize="16dp"/>
+    <Button android:id="@+id/needPermission_text_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:foreground="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="Turn On"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="16sp"/>
 
 </LinearLayout>
