--- a/app/src/main/res/layout/squarecamera__activity_camera.xml
+++ b/app/src/main/res/layout/squarecamera__activity_camera.xml
@@ -1,15 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/black"
-              android:orientation="vertical">
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:context=".CameraActivity">
-    </FrameLayout>
+<FrameLayout
+    android:id="@+id/fragment_container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    />
 
-</LinearLayout>
