--- a/app/src/main/res/drawable/notify_mess_icon.xml
+++ b/app/src/main/res/drawable/notify_mess_icon.xml
@@ -5,7 +5,7 @@
 
     <item
         android:gravity="top|right"
-        android:src="@drawable/circle_indicator"
+        android:drawable="@drawable/circle_indicator"
     />
 
 </layer-list>
