--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -12,8 +12,9 @@
                  android:layout_height="match_parent"
                  android:layout_below="@id/changeemail_toolbar">
 
-        <RelativeLayout android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+        <FrameLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+        >
 
             <EditText
                 android:id="@+id/changeemail_text"
@@ -29,15 +30,14 @@
             <Button android:id="@+id/changeemail_save_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:inputType="textEmailAddress"
+                    android:layout_gravity="bottom"
                     android:text="GET CODE"
             />
 
-        </RelativeLayout>
+        </FrameLayout>
 
 
-        <RelativeLayout android:layout_width="match_parent"
+        <FrameLayout android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
             <EditText android:id="@+id/changeemail_pin_code"
@@ -51,10 +51,10 @@
             <Button android:id="@+id/changeemail_check_verify"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="bottom"
                     android:text="SAVE"
             />
-        </RelativeLayout>
+        </FrameLayout>
 
     </ViewFlipper>
 
