--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/seperator_color"
@@ -7,4 +7,4 @@
     android:layout_height="match_parent"
     tools:context="com.linute.linute.LaunchActivity">
 
-</RelativeLayout>
+</FrameLayout>
