--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,44 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/mainActivity_nav_drawer_header"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical">
+<LinearLayout android:id="@+id/mainActivity_nav_drawer_header"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="180dp"
+              android:background="@color/colorPrimary"
+              android:orientation="vertical">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/navigation_header_profile_image"
         android:layout_width="@dimen/nav_header_profile_side"
         android:layout_height="@dimen/nav_header_profile_side"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="40dp"
         app:civ_border_color="@color/colorPrimary"
         app:civ_border_width="1dp"
-        />
+    />
 
     <TextView android:id="@+id/drawerHeader_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_below="@id/navigation_header_profile_image"
-              android:layout_centerHorizontal="true"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginBottom="4dp"
               android:textColor="@color/user_name_blue"
               android:textSize="@dimen/header_font_size"
               android:textStyle="bold"
-              android:layout_marginBottom="4dp"
               tools:text="FirstName LastName"
-        />
+    />
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_below="@id/drawerHeader_name"
+              android:layout_gravity="center_horizontal"
               android:text="Profile"
               android:textColor="@color/white"
               android:textSize="14sp"
               android:textStyle="bold"
-              android:layout_centerHorizontal="true"
-        />
+    />
 
-</RelativeLayout>
+</LinearLayout>
