--- a/app/src/main/res/layout/fragment_change_profile_image.xml
+++ b/app/src/main/res/layout/fragment_change_profile_image.xml
@@ -1,56 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/changeprofileimage_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="32dp"
         app:civ_border_color="@color/grey_color"
         app:civ_border_width="1dp"/>
 
-    <RelativeLayout android:id="@+id/changeprofileimage_buttons"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/changeprofileimage_image"
-        >
+    <LinearLayout android:id="@+id/changeprofileimage_buttons"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+    >
 
         <TextView android:id="@+id/changeprofileimage_change_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
+                  android:layout_gravity="center_horizontal"
                   android:gravity="center"
                   android:padding="20dp"
-                  android:layout_centerHorizontal="true"
-                  android:textSize="@dimen/header_font_size"
-                  android:text="Change"/>
+                  android:text="Change"
+                  android:textSize="@dimen/header_font_size"/>
 
         <TextView android:id="@+id/changeprofileimage_save_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
+                  android:layout_gravity="center_horizontal"
                   android:gravity="center"
-                  android:layout_centerHorizontal="true"
-                  android:layout_below="@id/changeprofileimage_change_button"
                   android:padding="20dp"
-                  android:textSize="@dimen/header_font_size"
-                  android:text="Save"/>
-    </RelativeLayout>
+                  android:text="Save"
+                  android:textSize="@dimen/header_font_size"/>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/changeprofileimage_progressbar"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/changeprofileimage_image"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="32dp"
-        android:layout_centerHorizontal="true"
         android:visibility="gone"
-        />
+    />
 
-</RelativeLayout>
+</LinearLayout>
