--- a/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentStart="true"
+              android:layout_marginBottom="4dp"
+              android:layout_marginEnd="48dp"
+              android:layout_marginStart="12dp"
+              android:layout_marginTop="4dp"
+              android:background="@drawable/chat_item_you"
+              android:orientation="vertical"
+              android:paddingEnd="12dp"
+              android:paddingStart="12dp">
 
+    <TextView android:id="@+id/chat_user_message"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="..."
+              android:textColor="@color/eighty_black"
+              android:textSize="20sp"
+              android:textStyle="bold"
+    />
 
-    <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_alignParentStart="true"
-                  android:layout_marginEnd="48dp"
-                  android:layout_marginStart="12dp"
-                  android:layout_marginTop="4dp"
-                  android:layout_marginBottom="4dp"
-                  android:background="@drawable/chat_item_you"
-                  android:paddingStart="12dp"
-                  android:paddingEnd="12dp"
-                  android:orientation="vertical">
+</LinearLayout>
 
-        <TextView android:id="@+id/chat_user_message"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:textColor="@color/eighty_black"
-                  android:textSize="20sp"
-                  android:textStyle="bold"
-                  android:text="..."
-        />
-
-    </LinearLayout>
-
-</RelativeLayout>
