--- a/app/src/main/res/layout/fragment_search_user_list_item.xml
+++ b/app/src/main/res/layout/fragment_search_user_list_item.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:textStyle="bold"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:textColor="@color/user_comment_color"
