--- a/app/src/main/res/layout/friend_search_item.xml
+++ b/app/src/main/res/layout/friend_search_item.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?android:selectableItemBackground"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="?android:selectableItemBackground">
 
     <ImageView
         android:id="@+id/friendSearchItem_profile_image"
         android:layout_width="64dp"
         android:layout_height="64dp"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/friendSearchItem_add_button"
-               android:layout_width="40dp"
-               android:layout_height="40dp"
-               android:layout_alignParentEnd="true"
-               android:layout_centerVertical="true"
-               android:layout_marginStart="@dimen/activity_horizontal_margin"
-               android:layout_marginEnd="@dimen/activity_horizontal_margin"
-               app:civ_border_width="0px"
-               tools:src="@drawable/add_friend"/>
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout android:layout_width="0px"
                   android:layout_height="wrap_content"
-                  android:layout_centerVertical="true"
+                  android:layout_gravity="center_vertical"
+                  android:layout_weight="1"
                   android:layout_marginStart="16dp"
-                  android:orientation="vertical"
-                  android:layout_toEndOf="@id/friendSearchItem_profile_image"
-                  android:layout_toStartOf="@id/friendSearchItem_add_button">
+                  android:orientation="vertical">
 
         <TextView android:id="@+id/friendSearchItem_full_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:singleLine="true"
+                  android:lines="1"
+                  android:ellipsize="end"
                   android:textColor="@android:color/darker_gray"
                   android:textSize="16sp"
                   tools:text="Fullname lastname"
-            />
-
-
+        />
     </LinearLayout>
-</RelativeLayout>
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/friendSearchItem_add_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        app:civ_border_width="0px"
+        tools:src="@drawable/add_friend"/>
+
+</LinearLayout>
