--- a/app/src/main/res/layout/load_more_footer.xml
+++ b/app/src/main/res/layout/load_more_footer.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+>
 
 
     <ProgressBar android:id="@+id/updateFragment_progress_bar"
                  style="?android:attr/progressBarStyleSmall"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:layout_centerInParent="true"
+                 android:layout_gravity="center"
                  android:layout_marginTop="35dp"/>
 
     <Button android:id="@+id/updatesFragment_reload_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:text="Reload"
             android:visibility="gone"/>
 
-</RelativeLayout>
+</FrameLayout>
