--- a/app/src/main/res/layout/no_comments_item.xml
+++ b/app/src/main/res/layout/no_comments_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_centerInParent="true"
+              android:layout_gravity="center"
               android:layout_margin="32dp"
               android:textSize="@dimen/header_font_size"
               android:textColor="@color/eighty_black"
@@ -13,4 +13,4 @@
               android:text="@string/no_comment"
         />
 
-</RelativeLayout>
+</FrameLayout>
