--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="16dp"
+            android:foreground="?selectableItemBackgroundBorderless"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_action_check83"/>
     </FrameLayout>
